fix: remove scrollbar-gutter

--- a/fern/style.css
+++ b/fern/style.css
@@ -1,5 +1,4 @@
 html {
-  scrollbar-gutter: stable;
   background-image: var(--docs-background-image);
 }
 
